Fixed dark mode white text

--- a/public/css/dark.css
+++ b/public/css/dark.css
@@ -195,9 +195,10 @@
   body.dark-mode #reviews .name {
     color: #fff;
   }
-  body.dark-mode #form #contact .input-group input{
+  body.dark-mode input{
     color: #fff;
   }
+
   
 }
 /* Desktop */
